--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <label>ကျသင့်ငွေစုစုပေါင်း:</label>
                         <input type="number" id="total-amount" required min="0">
                     </div>
-                    <button type="submit">သိမ်းဆည်းမည်</button>
+                    <button type="submit" style="color: black;">သိမ်းဆည်းမည်</button>
                 </form>
             </div>
 
